# Passenger-Desktop

./: .env.test  .eslintrc  .gitignore  CODE_OF_CONDUCT.md  README.md  index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  passenger.bus  tauri.conf.json  £#
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: cli.ts  keychain.ts  storage.ts
src/app/: App.tsx
src/components/: GuideSwiper.tsx  LoginForm.tsx  Logo.tsx  PassphraseCardList.tsx  PassphraseDetails.tsx  ReAuthModal.tsx  SearchBar.tsx  Window.tsx  WindowMachine.tsx
src/data/: guide.tsx
src/design/: global.css  swiper.css
src/helpers/: apiCaller.ts  cookies.ts  formik.ts  formik.tsx  notifications.ts  prettiers.ts  requests.ts  services.ts  statistics.ts  strength.ts  strentgh.ts  string.ts
src/hooks/: authorization.ts
src/services/: authServices.ts  constantPairServices.ts  dataTransferServices.ts  generationServices.ts  index.tsx  newsServices.ts  otherServices.ts  passphraseServices.ts  reportServices.ts
src/stores/: authorization.ts  keyring.ts  notification.ts  passphrases.ts  search.ts  window.ts
src/types/: api.d.ts  common.d.ts  inputs.d.ts  leakes.d.ts  reports.d.ts  statistics.d.ts  utility.d.ts
src/windows/: LoginWin.tsx  MainWin.tsx  PasswordWin.tsx  WindowManager.tsx
tests/api/: keychain.test.ts
tests/services/: authServices.test.ts  dataTransferServices.test.ts  (+5 more)
(+203 files in other folders)
