[package]
name = "passenger-ui"
version = "0.0.0"
description = "Frontend for the Passenger Passphrase Manager"
authors = ["Elagoht"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [ "http-request",
  "dialog-save",
  "fs-write-file",
  "shell-sidecar",
  "shell-open",
  "shell-execute",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
keyring = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
